templates/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: workadventure
  namespace: workadventure
spec:
  hosts:
    - chat.workadventure.minikube
    - play.workadventure.minikube
    - icon.workadventure.minikube
    - map-storage.workadventure.minikube
    - ejabberd.workadventure.minikube
  http:
    - route:
        - destination:
            host: workadventure-chat
            port:
              number: 80
          match:
            - uri:
                prefix: /
    - route:
        - destination:
            host: workadventure-play
            port:
              number: 3000
          match:
            - uri:
                prefix: /
    - route:
        - destination:
            host: workadventure-icon
            port:
              number: 8080
          match:
            - uri:
                prefix: /
    - route:
        - destination:
            host: workadventure-map-storage
            port:
              number: 3000
          match:
            - uri:
                prefix: /
    - route:
        - destination:
            host: workadventure-ejabberd
            port:
              number: 5443
          match:
            - uri:
                prefix: /
  tls:
    - hosts:
        - chat.workadventure.minikube
        - play.workadventure.minikube
        - icon.workadventure.minikube
        - map-storage.workadventure.minikube
        - ejabberd.workadventure.minikube
